_generated-doc/2.7/config/quarkus-kafka-streams-general-config-items.adoc
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference, cols="80,.^10,.^10"]
|===

h|[[quarkus-kafka-streams-general-config-items_configuration]]link:#quarkus-kafka-streams-general-config-items_configuration[Configuration property]

h|Type
h|Default

a| [[quarkus-kafka-streams-general-config-items_quarkus.kafka-streams.sasl.mechanism]]`link:#quarkus-kafka-streams-general-config-items_quarkus.kafka-streams.sasl.mechanism[quarkus.kafka-streams.sasl.mechanism]`

[.description]
--
SASL mechanism used for client connections
--|string 
|


a| [[quarkus-kafka-streams-general-config-items_quarkus.kafka-streams.sasl.jaas-config]]`link:#quarkus-kafka-streams-general-config-items_quarkus.kafka-streams.sasl.jaas-config[quarkus.kafka-streams.sasl.jaas-config]`

[.description]
--
JAAS login context parameters for SASL connections in the format used by JAAS configuration files
--|string 
|


a| [[quarkus-kafka-streams-general-config-items_quarkus.kafka-streams.sasl.client-callback-handler-class]]`link:#quarkus-kafka-streams-general-config-items_quarkus.kafka-streams.sasl.client-callback-handler-class[quarkus.kafka-streams.sasl.client-callback-handler-class]`

[.description]
--
The fully qualified name of a SASL client callback handler class
--|string 
|


a| [[quarkus-kafka-streams-general-config-items_quarkus.kafka-streams.sasl.login-callback-handler-class]]`link:#quarkus-kafka-streams-general-config-items_quarkus.kafka-streams.sasl.login-callback-handler-class[quarkus.kafka-streams.sasl.login-callback-handler-class]`

[.description]
--
The fully qualified name of a SASL login callback handler class
--|string 
|


a| [[quarkus-kafka-streams-general-config-items_quarkus.kafka-streams.sasl.login-class]]`link:#quarkus-kafka-streams-general-config-items_quarkus.kafka-streams.sasl.login-class[quarkus.kafka-streams.sasl.login-class]`

[.description]
--
The fully qualified name of a class that implements the Login interface
--|string 
|


a| [[quarkus-kafka-streams-general-config-items_quarkus.kafka-streams.sasl.kerberos-service-name]]`link:#quarkus-kafka-streams-general-config-items_quarkus.kafka-streams.sasl.kerberos-service-name[quarkus.kafka-streams.sasl.kerberos-service-name]`

[.description]
--
The Kerberos principal name that Kafka runs as
--|string 
|


a| [[quarkus-kafka-streams-general-config-items_quarkus.kafka-streams.sasl.kerberos-kinit-cmd]]`link:#quarkus-kafka-streams-general-config-items_quarkus.kafka-streams.sasl.kerberos-kinit-cmd[quarkus.kafka-streams.sasl.kerberos-kinit-cmd]`

[.description]
--
Kerberos kinit command path
--|string 
|


a| [[quarkus-kafka-streams-general-config-items_quarkus.kafka-streams.sasl.kerberos-ticket-renew-window-factor]]`link:#quarkus-kafka-streams-general-config-items_quarkus.kafka-streams.sasl.kerberos-ticket-renew-window-factor[quarkus.kafka-streams.sasl.kerberos-ticket-renew-window-factor]`

[.description]
--
Login thread will sleep until the specified window factor of time from last refresh
--|double 
|


a| [[quarkus-kafka-streams-general-config-items_quarkus.kafka-streams.sasl.kerberos-ticket-renew-jitter]]`link:#quarkus-kafka-streams-general-config-items_quarkus.kafka-streams.sasl.kerberos-ticket-renew-jitter[quarkus.kafka-streams.sasl.kerberos-ticket-renew-jitter]`

[.description]
--
Percentage of random jitter added to the renewal time
--|double 
|


a| [[quarkus-kafka-streams-general-config-items_quarkus.kafka-streams.sasl.kerberos-min-time-before-relogin]]`link:#quarkus-kafka-streams-general-config-items_quarkus.kafka-streams.sasl.kerberos-min-time-before-relogin[quarkus.kafka-streams.sasl.kerberos-min-time-before-relogin]`

[.description]
--
Percentage of random jitter added to the renewal time
--|long 
|


a| [[quarkus-kafka-streams-general-config-items_quarkus.kafka-streams.sasl.login-refresh-window-factor]]`link:#quarkus-kafka-streams-general-config-items_quarkus.kafka-streams.sasl.login-refresh-window-factor[quarkus.kafka-streams.sasl.login-refresh-window-factor]`

[.description]
--
Login refresh thread will sleep until the specified window factor relative to the credential's lifetime has been reached-
--|double 
|


a| [[quarkus-kafka-streams-general-config-items_quarkus.kafka-streams.sasl.login-refresh-window-jitter]]`link:#quarkus-kafka-streams-general-config-items_quarkus.kafka-streams.sasl.login-refresh-window-jitter[quarkus.kafka-streams.sasl.login-refresh-window-jitter]`

[.description]
--
The maximum amount of random jitter relative to the credential's lifetime
--|double 
|


a| [[quarkus-kafka-streams-general-config-items_quarkus.kafka-streams.sasl.login-refresh-min-period]]`link:#quarkus-kafka-streams-general-config-items_quarkus.kafka-streams.sasl.login-refresh-min-period[quarkus.kafka-streams.sasl.login-refresh-min-period]`

[.description]
--
The desired minimum duration for the login refresh thread to wait before refreshing a credential
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor[icon:question-circle[], title=More information about the Duration format]
|


a| [[quarkus-kafka-streams-general-config-items_quarkus.kafka-streams.sasl.login-refresh-buffer]]`link:#quarkus-kafka-streams-general-config-items_quarkus.kafka-streams.sasl.login-refresh-buffer[quarkus.kafka-streams.sasl.login-refresh-buffer]`

[.description]
--
The amount of buffer duration before credential expiration to maintain when refreshing a credential
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor[icon:question-circle[], title=More information about the Duration format]
|


a| [[quarkus-kafka-streams-general-config-items_quarkus.kafka-streams.ssl.protocol]]`link:#quarkus-kafka-streams-general-config-items_quarkus.kafka-streams.ssl.protocol[quarkus.kafka-streams.ssl.protocol]`

[.description]
--
The SSL protocol used to generate the SSLContext
--|string 
|


a| [[quarkus-kafka-streams-general-config-items_quarkus.kafka-streams.ssl.provider]]`link:#quarkus-kafka-streams-general-config-items_quarkus.kafka-streams.ssl.provider[quarkus.kafka-streams.ssl.provider]`

[.description]
--
The name of the security provider used for SSL connections
--|string 
|


a| [[quarkus-kafka-streams-general-config-items_quarkus.kafka-streams.ssl.cipher-suites]]`link:#quarkus-kafka-streams-general-config-items_quarkus.kafka-streams.ssl.cipher-suites[quarkus.kafka-streams.ssl.cipher-suites]`

[.description]
--
A list of cipher suites
--|string 
|


a| [[quarkus-kafka-streams-general-config-items_quarkus.kafka-streams.ssl.enabled-protocols]]`link:#quarkus-kafka-streams-general-config-items_quarkus.kafka-streams.ssl.enabled-protocols[quarkus.kafka-streams.ssl.enabled-protocols]`

[.description]
--
The list of protocols enabled for SSL connections
--|string 
|


a| [[quarkus-kafka-streams-general-config-items_quarkus.kafka-streams.ssl.truststore.type]]`link:#quarkus-kafka-streams-general-config-items_quarkus.kafka-streams.ssl.truststore.type[quarkus.kafka-streams.ssl.truststore.type]`

[.description]
--
Trust store type
--|string 
|


a| [[quarkus-kafka-streams-general-config-items_quarkus.kafka-streams.ssl.truststore.location]]`link:#quarkus-kafka-streams-general-config-items_quarkus.kafka-streams.ssl.truststore.location[quarkus.kafka-streams.ssl.truststore.location]`

[.description]
--
Trust store location
--|string 
|


a| [[quarkus-kafka-streams-general-config-items_quarkus.kafka-streams.ssl.truststore.password]]`link:#quarkus-kafka-streams-general-config-items_quarkus.kafka-streams.ssl.truststore.password[quarkus.kafka-streams.ssl.truststore.password]`

[.description]
--
Trust store password
--|string 
|


a| [[quarkus-kafka-streams-general-config-items_quarkus.kafka-streams.ssl.truststore.certificates]]`link:#quarkus-kafka-streams-general-config-items_quarkus.kafka-streams.ssl.truststore.certificates[quarkus.kafka-streams.ssl.truststore.certificates]`

[.description]
--
Trust store certificates
--|string 
|


a| [[quarkus-kafka-streams-general-config-items_quarkus.kafka-streams.ssl.keystore.type]]`link:#quarkus-kafka-streams-general-config-items_quarkus.kafka-streams.ssl.keystore.type[quarkus.kafka-streams.ssl.keystore.type]`

[.description]
--
Key store type
--|string 
|


a| [[quarkus-kafka-streams-general-config-items_quarkus.kafka-streams.ssl.keystore.location]]`link:#quarkus-kafka-streams-general-config-items_quarkus.kafka-streams.ssl.keystore.location[quarkus.kafka-streams.ssl.keystore.location]`

[.description]
--
Key store location
--|string 
|


a| [[quarkus-kafka-streams-general-config-items_quarkus.kafka-streams.ssl.keystore.password]]`link:#quarkus-kafka-streams-general-config-items_quarkus.kafka-streams.ssl.keystore.password[quarkus.kafka-streams.ssl.keystore.password]`

[.description]
--
Key store password
--|string 
|


a| [[quarkus-kafka-streams-general-config-items_quarkus.kafka-streams.ssl.keystore.key]]`link:#quarkus-kafka-streams-general-config-items_quarkus.kafka-streams.ssl.keystore.key[quarkus.kafka-streams.ssl.keystore.key]`

[.description]
--
Key store private key
--|string 
|


a| [[quarkus-kafka-streams-general-config-items_quarkus.kafka-streams.ssl.keystore.certificate-chain]]`link:#quarkus-kafka-streams-general-config-items_quarkus.kafka-streams.ssl.keystore.certificate-chain[quarkus.kafka-streams.ssl.keystore.certificate-chain]`

[.description]
--
Key store certificate chain
--|string 
|


a| [[quarkus-kafka-streams-general-config-items_quarkus.kafka-streams.ssl.key.password]]`link:#quarkus-kafka-streams-general-config-items_quarkus.kafka-streams.ssl.key.password[quarkus.kafka-streams.ssl.key.password]`

[.description]
--
Password of the private key in the key store
--|string 
|


a| [[quarkus-kafka-streams-general-config-items_quarkus.kafka-streams.ssl.keymanager-algorithm]]`link:#quarkus-kafka-streams-general-config-items_quarkus.kafka-streams.ssl.keymanager-algorithm[quarkus.kafka-streams.ssl.keymanager-algorithm]`

[.description]
--
The algorithm used by key manager factory for SSL connections
--|string 
|


a| [[quarkus-kafka-streams-general-config-items_quarkus.kafka-streams.ssl.trustmanager-algorithm]]`link:#quarkus-kafka-streams-general-config-items_quarkus.kafka-streams.ssl.trustmanager-algorithm[quarkus.kafka-streams.ssl.trustmanager-algorithm]`

[.description]
--
The algorithm used by trust manager factory for SSL connections
--|string 
|


a| [[quarkus-kafka-streams-general-config-items_quarkus.kafka-streams.ssl.endpoint-identification-algorithm]]`link:#quarkus-kafka-streams-general-config-items_quarkus.kafka-streams.ssl.endpoint-identification-algorithm[quarkus.kafka-streams.ssl.endpoint-identification-algorithm]`

[.description]
--
The endpoint identification algorithm to validate server hostname using server certificate
--|string 
|`https`


a| [[quarkus-kafka-streams-general-config-items_quarkus.kafka-streams.ssl.secure-random-implementation]]`link:#quarkus-kafka-streams-general-config-items_quarkus.kafka-streams.ssl.secure-random-implementation[quarkus.kafka-streams.ssl.secure-random-implementation]`

[.description]
--
The SecureRandom PRNG implementation to use for SSL cryptography operations
--|string 
|

|===
ifndef::no-duration-note[]
[NOTE]
[[duration-note-anchor]]
.About the Duration format
====
The format for durations uses the standard `java.time.Duration` format.
You can learn more about it in the link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html#parse-java.lang.CharSequence-[Duration#parse() javadoc].

You can also provide duration values starting with a number.
In this case, if the value consists only of a number, the converter treats the value as seconds.
Otherwise, `PT` is implicitly prepended to the value to obtain a standard `java.time.Duration` format.
====
endif::no-duration-note[]
